--- a/src/App.scss
+++ b/src/App.scss
@@ -27,4 +27,8 @@ html {
   justify-content: center;
   margin: 0px 20px;
   height: calc(100vh - 125px);
+  > div {
+    height: 100%;
+    overflow: auto;
+  }
 }
