--- a/src/components/ListTest/ListTest.module.scss
+++ b/src/components/ListTest/ListTest.module.scss
@@ -2,6 +2,11 @@
   background-color: #009edb;
 }
 
+.list-main-container {
+  height: 100%;
+  overflow: auto;
+}
+
 .listContainer {
   display: flex;
   flex-direction: column;
